--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-source-filesystem": "^2.3.3",
+    "gatsby-transformer-remark": "^2.8.8",
     "gatsby-transformer-sharp": "^2.5.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
